# devsweep

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_COMPLETE.md  Cargo.toml  LICENSE  PHASE1_SUMMARY.md  README.md  SECURITY.md  codecov.yml  create-app-bundle.sh  create-icon.sh  lcov.info  logo.icns  uirev.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: AI_CONTEXT.md  GIT_WORKFLOW.md  MAINTAINER_GUIDE.md  MIGRATION_TO_MAIN.md  PROJECT_SUMMARY.md  README.md  TESTING.md  VERSIONING.md
docs/coverage/: IMPROVEMENT_PLAN.md  PHASE1_COMPLETION.md  QUICK_CHECKLIST.md  README.md
scripts/: create-app-bundle.sh  create-icon.sh  entitlements.plist  run-tests.sh
src/: assets.rs  backend.rs  cache_settings.rs  cleanup_history.rs  custom_paths.rs  lib.rs  main.rs  port_manager.rs  scan_cache.rs  single_instance.rs  trends.rs  types.rs  update_checker.rs  utils.rs
src/app/: actions.rs  mod.rs  render.rs  state.rs
src/checkers/: browser.rs  db.rs  docker.rs  general.rs  git.rs  go.rs  homebrew.rs  ide.rs  java.rs  logs.rs  mod.rs  nodejs.rs  python.rs  rust_cargo.rs  shell.rs  xcode.rs
src/ui/: mod.rs  (+2 more)
tests/: performance_tests.rs  test_backend.rs  test_cache_settings.rs  test_checkers.rs  test_cleanup_history.rs  test_db_checker.rs  test_docker_checker.rs  test_edge_cases.rs  test_go_checker.rs  test_homebrew_checker.rs  test_ide_checker.rs  test_integration_workflows.rs  test_nodejs_checker.rs  test_persistence.rs  test_python_checker.rs  test_scan_cache.rs  test_shell_checker.rs  test_single_instance.rs  test_types.rs  test_utils.rs  test_xcode_checker.rs
(+8 files in other folders)
