[package]
name = "dev-cleaner"
version = "0.1.0"
edition = "2021"
description = "Development Cleaner - Desktop App with GPUI"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.167.2" }
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
bytesize = "1.3"
rayon = "1.8"
chrono = "0.4"
fs2 = "0.4.3"

[[bin]]
name = "dev-cleaner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
