[package]
name = "devsweep"
version = "0.3.0"
edition = "2021"
authors = ["DevSweep Contributors"]
description = "A modern macOS desktop application that helps developers reclaim disk space by identifying and safely removing development tool caches and build artifacts"
readme = "README.md"
homepage = "https://github.com/canggihpw/devsweep"
repository = "https://github.com/canggihpw/devsweep"
license = "MIT"
keywords = ["developer-tools", "macos", "cache-cleaner", "disk-space", "cleanup"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.167.2" }
rust-embed = "8.2"
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
bytesize = "1.3"
rayon = "1.8"
chrono = "0.4"
fs2 = "0.4.3"
image = "0.25.9"
ureq = { version = "2.9", features = ["json"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "devsweep"
path = "src/lib.rs"

[[bin]]
name = "devsweep"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
